Fix error messages were instantly visible

--- a/ebegu-web/src/core/component/dv-error-messages/dv-error-messages.less
+++ b/ebegu-web/src/core/component/dv-error-messages/dv-error-messages.less
@@ -9,7 +9,7 @@
 
 }
 
-dv-error-messages {
+.dv-error-messages {
     height: 2.75rem;
     display: block;
     max-height: 2.75rem;
