--- a/ebegu-web/src/core/core.module.less
+++ b/ebegu-web/src/core/core.module.less
@@ -116,7 +116,8 @@
         .form-control.ng-untouched ~ dv-error-messages > .dv-error-messages > .error,
         .input-element.ng-untouched ~ dv-error-messages > .dv-error-messages > .error,
         .form-group.ng-untouched ~ dv-error-messages > .dv-error-messages > .error,
-        .md-input-container.ng-untouched ~ dv-error-messages > .dv-error-messages > .error {
+        .md-input-container.ng-untouched ~ dv-error-messages > .dv-error-messages > .error,
+        .input-element.ng-untouched ~ .dv-error-messages > .error {
             display: none;
         }
 
